--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <main>
 
     <h1><b>My Assignments</b></h1>
-    <li> <a href="./Api1/fetch_html.html" id="changeMeme">API #1</a></li>
-    <li> <a href="fetch_2.js">API #2</a></li>
+    <li> <a href="./Api1/countries.html" id="changeMeme">API #1</a></li>
+    <li> <a href="./Api2/memes.html">API #2</a></li>
     <li> <a href="assignment 4/Assignment 4.html">final project</a></li>
     </section>
 
