--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1><b>My Assignments</b></h1>
     <li> <a href="./Api1/countries.html" id="changeMeme">API #1</a></li>
     <li> <a href="./Api2/memes.html">API #2</a></li>
-    <li> <a href="assignment 4/Assignment 4.html">final project</a></li>
+    <li> <a href="./Api3/gifs.html">API #3</a></li>
     </section>
 
     <figure>
